<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Pebble Notifications</string>

    <string name="welcome">To setup, follow these steps:</string>
    <string name="step1">First, install the associated Pebble app:</string>
    <string name="install_app">Install Pebble app…</string>
    <string name="step2">Next, make sure this app has permission to access your notifications:</string>
    <string name="add_permission">Add security permission…</string>
    <string name="step3">Finally, send a test notification:</string>
    <string name="create_notif">Send test notification</string>
    <string name="step4">If it\'s on your Pebble, you\'re done! All notifications from now on will be pushed.</string>
    <string name="finish">Done</string>

    <string name="open_app_menu">Open Pebble app…</string>
    <string name="test_notification_menu">Send test notification</string>
    <string name="setup">Setup…</string>
    <string name="about">About</string>

</resources>
