<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="uk.co.connorhd.android.pebblenotifications.SetupFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp"
        android:text="@string/welcome"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step1"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnInstallApp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/install_app" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/step2"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnAddPermission"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_permission" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/step3"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnCreateNotify"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_notif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:text="@string/step4"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/finish" />

</LinearLayout>
